--- a/en/index.html
+++ b/en/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="../css/style.css?v12" media="all">
+	<link rel="stylesheet" href="../css/style.css?v13" media="all">
 </head>
 <body>
 	<div class="page-wrapper">
@@ -516,53 +516,70 @@
 					</div>
 				</div>
 			</section>
+		</div>
+		<div class="box-wrapper colored-bg">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
+				</ul>
+			</div>
+			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
+					<!--
 					<h2 class="box-title ta-r">
-						Roadmap
+						로드맵
 					</h2>
-					<h3 class="box-title-ann mtop ta-r">Roadmap</h3>
+					<h3 class="box-title-ann mtop ta-r">로드맵</h3>
 					<div class="roadmap-container">
 						<div class="roadmap-slider-wrapper">
 							<div class="roadmap-slider">
 								<div class="roadmap-slide done">
-									<h3 class="first-title">Stage I<br>2017 - Q2/ 2018</h3>
-									<div class="roadmap-slider-box">Idea formalization</div>
-									<div class="roadmap-slider-box">Team formation</div>
+									<h3 class="first-title">제1 단계<br>2017 - Q2/ 2018</h3>
+									<div class="roadmap-slider-box">아이디어 형식화</div>
 								</div>
 								<div class="roadmap-slide done">
-									<h3 class="first-title">Stage II<br>Q3/ 2018</h3>
-									<div class="roadmap-slider-box">Private presentation to market leaders</div>
-									<div class="roadmap-slider-box">Marketing campaign</div>
+									<h3 class="first-title">제2 단계<br>Q3/ 2018</h3>
+									<div class="roadmap-slider-box">주력주를 위한 비공개 발표</div>
+									<div class="roadmap-slider-box">마케팅 캠페인</div>
 								</div>
 								<div class="roadmap-slide">
-									<h3 class="first-title">Stage III<br>Q4/ 2018</h3>
-									<div class="roadmap-slider-box">Roadshow</div>
-									<div class="roadmap-slider-box">Private Sale</div>
-									<div class="roadmap-slider-box">10+ companies confirmation for intergration</div>
+									<h3 class="first-title">제3 단계<br>Q4/ 2018</h3>
+									<div class="roadmap-slider-box">MVP</div>
+									<div class="roadmap-slider-box">순회흥행 (로드쇼)</div>
+									<div class="roadmap-slider-box">개인 판매</div>
+									<div class="roadmap-slider-box">10+ 회사의 통합 확인</div>
 								</div>
 								<div class="roadmap-slide">
-									<h3 class="first-title">Stage IV<br>Q1/ 2019  - Q3/2019</h3>
-									<div class="roadmap-slider-box">20+ companies confirmation for integration</div>
-									<div class="roadmap-slider-box">Public tokensale</div>
-									<div class="roadmap-slider-box">Token distribution</div>
+									<h3 class="first-title">제4 단계<br>Q1/ 2019  - Q3/2019</h3>
+									<div class="roadmap-slider-box">20+ 회사의 통합 확인</div>
+									<div class="roadmap-slider-box">토큰 공매</div>
+									<div class="roadmap-slider-box">토큰 분배</div>
 								</div>
 								<div class="roadmap-slide">
-									<h3 class="first-title">Stage IV<br>Q1/ 2019  - Q3/2019</h3>
-									<div class="roadmap-slider-box">Platform public launch</div>
-									<div class="roadmap-slider-box">Listing on exchange</div>
-									<div class="roadmap-slider-box">40+ companies confirmation for integration</div>
-									<div class="roadmap-slider-box">Integration with 20 + companies</div>
-									<div class="roadmap-slider-box">Global expansion</div>
+									<h3 class="first-title">제5 단계<br>Q1/ 2019  - Q3/2019</h3>
+									<div class="roadmap-slider-box">플랫폼의 공공 출시</div>
+									<div class="roadmap-slider-box">거래소에서의 상장되기</div>
+									<div class="roadmap-slider-box">40+ 회사의 통합 확인</div>
+									<div class="roadmap-slider-box">회사 20개 이상과의 통합</div>
+									<div class="roadmap-slider-box">전체적 확대</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					-->
 				</div>
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/profile" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
 		<!--
@@ -819,7 +836,7 @@
 	<script src="../js/slick.min.js"></script>
 	<script src="../js/alfaNavbar.min.js"></script>
 	<script src="../js/jquery.fancybox.min.js"></script>
-	<script src="../js/scripts.js?v12"></script>
+	<script src="../js/scripts.js?v13"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
