--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v12" media="all">
+	<link rel="stylesheet" href="css/style.css?v13" media="all">
 </head>
 <body>
 	<div class="page-wrapper">
@@ -395,8 +395,24 @@
 					</div>
 				</div>
 			</section>
+		</div>
+		<div class="box-wrapper colored-bg">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
+				</ul>
+			</div>
+			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
+					<!--
 					<h2 class="box-title ta-r">
 						로드맵
 					</h2>
@@ -437,6 +453,7 @@
 							</div>
 						</div>
 					</div>
+					-->
 				</div>
 			</section>
 			<div class="bottom-panel">
@@ -822,7 +839,7 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/alfaNavbar.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
-	<script src="js/scripts.js?v12"></script>
+	<script src="js/scripts.js?v13"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
