--- a/kr/index.html
+++ b/kr/index.html
@@ -118,15 +118,12 @@
 							<div class="main-image-box-light"></div>
 							<div class="main-image-box-icon"><img src="images/main-small-image-1.png" alt="" class="main-small-image im-1"></div>
 						</div>
-
 					</div>
-					<h1 class="first-title">
-						사업 <br>토큰화 <br>실험 계획안
-					</h1>
+					<h1 class="first-title">사업 <br>토큰화 <br>실험 계획안</h1>
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a  href="#investment-popup" data-fancybox class="button white block big">
+								<a href="/users/sign_up" class="button white block big">
 									<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">개인적 판매에 참여하다</button>
 								</a>
 							</div>
