--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="/profile" class="button white block big">
-									<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">Participate in pre-users/sign_up</button>
+								<a href="/users/sign_up" class="button white block big">
+									<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">Participate in Pre-IEO</button>
 								</a>
 							</div>
 						</div>
