--- a/index.html
+++ b/index.html
@@ -701,6 +701,9 @@
 							</a>
 						</div>
 					</div>
+					<div class="link-wrapper">
+						<a href="/policy.html">Privacy Policy</a>
+					</div>
 				</div>
 			</section>
 			<div class="bottom-panel last">
