--- a/kr/index.html
+++ b/kr/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="/css/slick.css" media="all">
 	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="/css/style.css?v15" media="all">
+	<link rel="stylesheet" href="/css/style.css?v16" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -32,7 +32,7 @@
 	<div class="page-wrapper">
 		<header class="box">
 			<a href="/kr/" title="" class="page-logo">
-				<img src="images/page-logo.png" alt="">
+				<img src="/images/page-logo.png" alt="">
 			</a>
 		</header>
 		<div class="nav-wrapper box">
@@ -709,6 +709,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="footer-wrapper">
+		<footer class="box">
+			<div class="coutries fl-r"><span class="coutries-info"><span>Azbit.com</span> OU is registered in Estonia <br> Punane 56, 13619 Tallinn, Estonia</span><img alt="" src="images/flag-ec.png"></div>
+		</footer>
+	</div>
 
 
 	<!-- <Popups -->
@@ -849,7 +854,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v15"></script>
+	<script src="/js/scripts.js?v16"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
