--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="/css/slick.css" media="all">
-	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="/css/style.css?v15" media="all">
+	<link rel="stylesheet" href="css/slick.css" media="all">
+	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
+	<link rel="stylesheet" href="css/style.css?v16" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -701,9 +701,6 @@
 							</a>
 						</div>
 					</div>
-					<div class="link-wrapper">
-						<a href="/policy.html">Privacy Policy</a>
-					</div>
 				</div>
 			</section>
 			<div class="bottom-panel last">
@@ -711,6 +708,14 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
+	</div>
+	<div class="footer-wrapper">
+		<footer class="box">
+			<div class="coutries fl-r"><span class="coutries-info"><span>Azbit.com</span> OU is registered in Estonia <br> Punane 56, 13619 Tallinn, Estonia</span><img alt="" src="images/flag-ec.png"></div>
+			<div class="link-wrapper">
+				<a href="/policy.html">Privacy Policy</a>
+			</div>
+		</footer>
 	</div>
 
 
@@ -852,7 +857,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v15"></script>
+	<script src="/js/scripts.js?v16"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
