--- a/kr/index.html
+++ b/kr/index.html
@@ -711,7 +711,12 @@
 	</div>
 	<div class="footer-wrapper">
 		<footer class="box">
-			<div class="coutries fl-r"><span class="coutries-info"><span>Azbit.com</span> OU is registered in Estonia <br> Punane 56, 13619 Tallinn, Estonia</span><img alt="" src="images/flag-ec.png"></div>
+			<div class="coutries fl-r">
+				<span class="coutries-info">
+					Product Protocol OÜ is registtered in Estonia
+					<br>Harju maakond, Tallinn, Kesklinna linnaosa, Narva mnt 7-634, 10117
+				</span>
+				<img alt="" src="images/flag-ec.png"></div>
 		</footer>
 	</div>
 
