--- a/index.html
+++ b/index.html
@@ -533,14 +533,14 @@
 		<div class="box-wrapper colored-bg">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
 			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"></div>
@@ -592,7 +592,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
+				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
 		<!--
