--- a/index.html
+++ b/index.html
@@ -716,7 +716,11 @@
 					Product Protocol OÜ is registtered in Estonia
 					<br>Harju maakond, Tallinn, Kesklinna linnaosa, Narva mnt 7-634, 10117
 				</span>
-				<img alt="" src="images/flag-ec.png"></div>
+				<img alt="" src="images/flag-ec.png">
+			</div>
+			<div class="link-wrapper">
+				<a href="/policy.html">Privacy Policy</a>
+			</div>
 		</footer>
 	</div>
 
