--- a/kr/index.html
+++ b/kr/index.html
@@ -4,7 +4,7 @@
 	<title>실험 계획안</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="description" content="">
+	<meta name="description" content="Product Protocol - Business tokenization protocol">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -32,7 +32,7 @@
 	<div class="page-wrapper">
 		<header class="box">
 			<a href="/kr/" title="" class="page-logo">
-				<img src="/images/page-logo.png" alt="">
+				<img src="/images/page-logo.png" alt="Product Protocol">
 			</a>
 		</header>
 		<div class="nav-wrapper box">
