--- a/kr/index.html
+++ b/kr/index.html
@@ -569,22 +569,38 @@
 					<div class="our-list-wrapper">
 						<div class="our-list">
 							<div class="our-list-item">
-								<a style="background-image: url(/images/our-image-3.jpg)" href="https://medium.com/@product.protocol/dear-friends-we-are-pleased-to-announce-our-meetup-may-12-in-hong-kong-a70c18c4a89" class="our-list-item-overlay">
+								<a style="background-image: url(https://cdn-images-1.medium.com/max/340/1*ENsKTxyp4rOdOgfkeXwTmA.jpeg)" rel="nofollow" target="blank" href="https://medium.com/@product.protocol/bridging-the-gap-between-crypto-and-fiat-6ad91e73f32e" class="our-list-item-overlay" title="Bridging the gap between crypto and fiat">
+									<span class="our-list-item-title">Bridging the gap between crypto and fiat</span>
+								</a>
+							</div>
+							<div class="our-list-item">
+								<a style="background-image: url(https://cdn-images-1.medium.com/max/340/1*877dHvdXWP-pNqO8NAuUTQ@2x.png)" rel="nofollow" target="blank" href="https://medium.com/@product.protocol/asset-tokenization-the-value-increasing-technology-c4a95ac7f3f5" class="our-list-item-overlay" title="Asset tokenization - the value increasing technology">
+									<span class="our-list-item-title">Asset tokenization - the value increasing technology</span>
+								</a>
+							</div>
+							<div class="our-list-item">
+								<a style="background-image: url(https://cdn-images-1.medium.com/max/340/1*2PluOP4-YWQfgeM4iWoCmA.png)" rel="nofollow" target="blank" href="https://medium.com/@product.protocol/we-ask-the-supporters-of-the-product-protocol-project-to-participate-in-the-forming-of-regional-6ab62376b1ae" class="our-list-item-overlay" title="We ask the supporters of the Product Protocol project to participate in the forming of regional communities in their respective countries and cities. The objective is to organize an event in your city, tell the people interested about the project, gather both positive and negative feedback.">
+									<span class="our-list-item-title">We ask the supporters of the Product Protocol project to participate in...</span>
+								</a>
+							</div>
+
+							<div class="our-list-item">
+								<a style="background-image: url(/images/our-image-3.jpg)" rel="nofollow" target="blank" href="https://medium.com/@product.protocol/dear-friends-we-are-pleased-to-announce-our-meetup-may-12-in-hong-kong-a70c18c4a89" class="our-list-item-overlay">
 									<span class="our-list-item-title">Dear friends, we are pleased to announce our meetup may 12 in Hong Kong!</span>
 								</a>
 							</div>
 							<div class="our-list-item">
-								<a style="background-image: url(/images/our-image-2.jpg)" href="https://medium.com/@product.protocol/new-video-what-is-the-product-protocol-platform-solution-d8048e5d8745" class="our-list-item-overlay">
+								<a style="background-image: url(/images/our-image-2.jpg)" rel="nofollow" target="blank" href="https://medium.com/@product.protocol/new-video-what-is-the-product-protocol-platform-solution-d8048e5d8745" class="our-list-item-overlay">
 									<span class="our-list-item-title">What is the product protocol platform solution</span>
 								</a>
 							</div>
 							<div class="our-list-item">
-								<a style="background-image: url(/images/our-image-4.jpg)" href="https://medium.com/@product.protocol/interview-cmo-pp-76702d387cd1" class="our-list-item-overlay">
+								<a style="background-image: url(/images/our-image-4.jpg)" rel="nofollow" target="blank" href="https://medium.com/@product.protocol/interview-cmo-pp-76702d387cd1" class="our-list-item-overlay">
 									<span class="our-list-item-title">Interview CMO PP</span>
 								</a>
 							</div>
 							<div class="our-list-item">
-								<a style="background-image: url(/images/our-image-1.jpg)" href="https://medium.com/@product.protocol/blockchain-version-of-alibaba-79f330e77695" class="our-list-item-overlay">
+								<a style="background-image: url(/images/our-image-1.jpg)" rel="nofollow" target="blank" href="https://medium.com/@product.protocol/blockchain-version-of-alibaba-79f330e77695" class="our-list-item-overlay">
 									<span class="our-list-item-title">Blockchain version of «Alibaba»</span>
 								</a>
 							</div>
