--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
 	</script>
 
 	<!-- Signup popup -->
-	<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-.." data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"fa87db330346776623d614c30","lid":"2b0dfaa25e","uniqueMethods":true}) })</script>
+	<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"fa87db330346776623d614c30","lid":"2b0dfaa25e","uniqueMethods":true}) })</script>
 	<!-- Scripts> -->
 </body>
 </html>
