--- a/kr/index.html
+++ b/kr/index.html
@@ -88,21 +88,21 @@
 				<div class="box-cell">
 					<div class="main-image-wrapper">
 						<div class="main-image-coin"></div>
-						<img src="images/main-image-bg.png" alt="" class="main-image-bg">
+						<img src="/images/main-image-bg.png" alt="" class="main-image-bg">
 						<div class="main-image-box b1">
 							<div class="main-image-box-cube big"></div>
 							<div class="main-image-box-light"></div>
-							<div class="main-image-box-icon"><img src="images/main-small-image-4.png" alt="" class="main-small-image im-1"></div>
+							<div class="main-image-box-icon"><img src="/images/main-small-image-4.png" alt="" class="main-small-image im-1"></div>
 						</div>
 						<div class="main-image-box b2">
 							<div class="main-image-box-cube big"></div>
 							<div class="main-image-box-light"></div>
-							<div class="main-image-box-icon"><img src="images/main-small-image-3.png" alt="" class="main-small-image im-1"></div>
+							<div class="main-image-box-icon"><img src="/images/main-small-image-3.png" alt="" class="main-small-image im-1"></div>
 						</div>
 						<div class="main-image-box b3">
 							<div class="main-image-box-cube big"></div>
 							<div class="main-image-box-light"></div>
-							<div class="main-image-box-icon"><img src="images/main-small-image-2.png" alt="" class="main-small-image im-1"></div>
+							<div class="main-image-box-icon"><img src="/images/main-small-image-2.png" alt="" class="main-small-image im-1"></div>
 						</div>
 						<div class="main-image-box b4">
 							<div class="main-image-box-cube big r"></div>
@@ -111,12 +111,12 @@
 						<div class="main-image-box b5">
 							<div class="main-image-box-cube medium"></div>
 							<div class="main-image-box-light"></div>
-							<div class="main-image-box-icon"><img src="images/main-small-image-5.png" alt="" class="main-small-image im-1"></div>
+							<div class="main-image-box-icon"><img src="/images/main-small-image-5.png" alt="" class="main-small-image im-1"></div>
 						</div>
 						<div class="main-image-box b6">
 							<div class="main-image-box-cube small"></div>
 							<div class="main-image-box-light"></div>
-							<div class="main-image-box-icon"><img src="images/main-small-image-1.png" alt="" class="main-small-image im-1"></div>
+							<div class="main-image-box-icon"><img src="/images/main-small-image-1.png" alt="" class="main-small-image im-1"></div>
 						</div>
 					</div>
 					<h1 class="first-title">사업 <br>토큰화 <br>실험 계획안</h1>
@@ -203,14 +203,14 @@
 							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-7.jpg" alt="">
+										<img src="/images/team-image-7.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Reuben Godfrey</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-8.jpg" alt="">
+										<img src="/images/team-image-8.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Adnan Ahmed Siddiqui</div>
@@ -218,7 +218,7 @@
 								<!--
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-9.jpg" alt="">
+										<img src="/images/team-image-9.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Kilian Peter Krings</div>
@@ -226,28 +226,28 @@
 								-->
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-10.jpg" alt="">
+										<img src="/images/team-image-10.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Deepanshu Bhatt</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-11.jpg" alt="">
+										<img src="/images/team-image-11.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Anthony Johnson</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-12.jpg" alt="">
+										<img src="/images/team-image-12.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Jonathan Fianu</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-13.jpg" alt="">
+										<img src="/images/team-image-13.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Will Bryant</div>
@@ -336,7 +336,7 @@
 						</div>
 					</div>
 					<a href="#connect-popup" data-fancybox class="protocol-button">
-						<img src="images/protocol-button-kr.png" alt="">
+						<img src="/images/protocol-button-kr.png" alt="">
 					</a>
 				</div>
 			</section>
@@ -639,11 +639,11 @@
 					</h2>
 					<h3 class="box-title-ann ta-r">파트너</h3>
 					<div class="partners-list">
-						<div class="partners-list-item"><img src="images/partner-image-5.png"></div>
-						<div class="partners-list-item"><img src="images/partner-image-6.png"></div>
-						<div class="partners-list-item"><img src="images/partner-image-7.png"></div>
-						<div class="partners-list-item"><img src="images/partner-image-8.png"></div>
-						<div class="partners-list-item"><img src="images/partner-image-9.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-5.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-6.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-7.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-8.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-9.png"></div>
 					</div>
 				</div>
 			</section>
@@ -675,47 +675,47 @@
 					<div class="socials-list">
 						<div class="socials-list-item">
 							<a href="https://t.me/pprotocol" class="social-image">
-								<img src="images/social-image-1.png" alt="">
+								<img src="/images/social-image-1.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://open.kakao.com/o/gvAI0sbb" class="social-image">
-								<img src="images/social-image-10.png" alt="">
+								<img src="/images/social-image-10.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://twitter.com/Pprotocolglobal" class="social-image">
-								<img src="images/social-image-2.png" alt="">
+								<img src="/images/social-image-2.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://www.facebook.com/pprotocolio" class="social-image">
-								<img src="images/social-image-8.png" alt="">
+								<img src="/images/social-image-8.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://medium.com/@product.protocol" class="social-image">
-								<img src="images/social-image-3.png" alt="">
+								<img src="/images/social-image-3.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://www.reddit.com/user/ProductProtocol" class="social-image">
-								<img src="images/social-image-7.png" alt="">
+								<img src="/images/social-image-7.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://github.com/ProductProtocol" class="social-image">
-								<img src="images/social-image-14.png" alt="">
+								<img src="/images/social-image-14.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://m.youtube.com/watch?v=IjEgbEW_VxI" class="social-image">
-								<img src="images/social-image-13.png" alt="">
+								<img src="/images/social-image-13.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://steemit.com/@product.protocol" class="social-image">
-								<img src="images/social-image-5.png" alt="">
+								<img src="/images/social-image-5.png" alt="">
 							</a>
 						</div>
 					</div>
@@ -734,7 +734,7 @@
 					Product Protocol OÜ is registtered in Estonia
 					<br>Harju maakond, Tallinn, Kesklinna linnaosa, Narva mnt 7-634, 10117
 				</span>
-				<img alt="" src="images/flag-ec.png"></div>
+				<img alt="" src="/images/flag-ec.png"></div>
 		</footer>
 	</div>
 
