--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v18" media="all">
+	<link rel="stylesheet" href="css/style.css?v19" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -191,7 +191,7 @@
 			<div class="colored-bg-elements">
 				<div class="blot blot-7"></div>
 			</div>
-			<section class="box box-table roadmap go-animate" id="team">
+			<section class="box box-table team go-animate" id="team">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						Ambassadors
@@ -548,7 +548,7 @@
 				</div>
 			</section>
 		</div>
-		<div class="box-wrapper colored-bg">
+		<div class="box-wrapper colored-bg dark-bg">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
@@ -881,7 +881,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v18"></script>
+	<script src="/js/scripts.js?v19"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
