--- a/kr/index.html
+++ b/kr/index.html
@@ -51,6 +51,7 @@
 						</a>
 						<div class="dropdown">
 							<a href="/kr/" class="dropdown-link"><span class="icon kr-icon"></span>Kr</a>
+							<a href="/ch/" class="dropdown-link"><span class="icon kr-icon"></span>Ch</a>
 							<a href="/" class="dropdown-link"><span class="icon en-icon"></span>En</a>
 						</div>
 					</li>
