--- a/ch/index.html
+++ b/ch/index.html
@@ -11,9 +11,9 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="css/slick.css" media="all">
-	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v21" media="all">
+	<link rel="stylesheet" href="/css/slick.css" media="all">
+	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
+	<link rel="stylesheet" href="/css/style.css?v22" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -51,7 +51,7 @@
 						</a>
 						<div class="dropdown">
 							<a href="/kr/" class="dropdown-link"><span class="icon kr-icon"></span>Kr</a>
-							<a href="/ch/" class="dropdown-link"><span class="icon kr-icon"></span>Ch</a>
+							<a href="/ch/" class="dropdown-link"><span class="icon ch-icon"></span>Ch</a>
 							<a href="/" class="dropdown-link"><span class="icon en-icon"></span>英文</a>
 						</div>
 					</li>
@@ -882,7 +882,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v21"></script>
+	<script src="/js/scripts.js?v22"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
