--- a/kr/index.html
+++ b/kr/index.html
@@ -204,54 +204,51 @@
 							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-7.jpg" alt="">
+										<img src="/images/team-image-14.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Reuben Godfrey</div>
+									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Alexander Kirvas</div>
+									<div class="team-type">Business Development (Europe)</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-8.jpg" alt="">
+										<img src="/images/team-image-15.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Adnan Ahmed Siddiqui</div>
-								</div>
-								<!--
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/team-image-9.jpg" alt="">
-									</div>
-									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Kilian Peter Krings</div>
-								</div>
-								-->
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/team-image-10.jpg" alt="">
-									</div>
-									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Deepanshu Bhatt</div>
+									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Alexander Richards</div>
+									<div class="team-type">Business Development Advisor (Korea)</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-11.jpg" alt="">
+										<img src="/images/team-image-5.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Anthony Johnson</div>
+									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
+									<div class="team-name">Eu Chan</div>
+									<div class="team-type">SMM manager</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-12.jpg" alt="">
+										<img src="/images/team-image-16.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Jonathan Fianu</div>
+									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">ONG Jun Hao</div>
+									<div class="team-type">Business Development Advisor (Singapore)</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-13.jpg" alt="">
+										<img src="/images/team-image-2.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Will Bryant</div>
+									<a href="https://medium.com/@p.protocol/interview-cmo-pp-4e0990df1296" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Julia Choi</div>
+									<div class="team-type">CMO</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/team-image-17.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/max-bystrov-633487184/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Max B.</div>
+									<div class="team-type">Investor Relationship</div>
 								</div>
 							</div>
 						</div>
