--- a/ch/index.html
+++ b/ch/index.html
@@ -63,7 +63,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
@@ -181,7 +182,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
@@ -192,7 +194,7 @@
 			<div class="colored-bg-elements">
 				<div class="blot blot-7"></div>
 			</div>
-			<section class="box box-table team go-animate" id="team">
+			<section class="box box-table team go-animate" id="ambassadors">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						大使
@@ -203,7 +205,7 @@
 							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-14.jpg" alt="">
+										<img src="images/team-image-14.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
@@ -211,7 +213,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-15.jpg" alt="">
+										<img src="images/team-image-15.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Richards</div>
@@ -219,7 +221,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="images/team-image-5.jpg" alt="">
 									</div>
 									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
 									<div class="team-name">Eu Chan</div>
@@ -227,7 +229,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-16.jpg" alt="">
+										<img src="images/team-image-16.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">ONG Jun Hao</div>
@@ -235,19 +237,86 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-2.jpg" alt="">
+										<img src="images/team-image-2.jpg" alt="">
 									</div>
 									<a href="https://medium.com/@p.protocol/interview-cmo-pp-4e0990df1296" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Julia Choi</div>
 									<div class="team-type">CMO</div>
 								</div>
+								<!--
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-17.jpg" alt="">
+										<img src="images/team-image-17.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/max-bystrov-633487184/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Max B.</div>
 									<div class="team-type">Investor Relationship</div>
+								</div>
+								-->
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="box box-table team go-animate" id="team">
+				<div class="box-cell">
+					<h2 class="box-title ta-r">
+						团队
+					</h2>
+					<h3 class="box-title-ann mtop ta-r">团队</h3>
+					<div class="team-container">
+						<div class="team-slider-wrapper">
+							<div class="team-slider team-list">
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-7.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Reuben Godfrey</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-8.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Adnan Ahmed Siddiqui</div>
+								</div>
+								<!--
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-9.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Kilian Peter Krings</div>
+								</div>
+								-->
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-10.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Deepanshu Bhatt</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-11.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Anthony Johnson</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-12.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Jonathan Fianu</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-13.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Will Bryant</div>
 								</div>
 							</div>
 						</div>
@@ -256,7 +325,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">参加预IEO</a>
+				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
 		<div class="colored-bg box-wrapper news-wrapper">
@@ -264,7 +333,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
@@ -404,7 +474,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
@@ -487,7 +558,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
@@ -551,7 +623,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
@@ -617,7 +690,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
@@ -656,7 +730,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">关于</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">团队</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
