--- a/kr/index.html
+++ b/kr/index.html
@@ -63,7 +63,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
@@ -182,7 +183,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
@@ -193,7 +195,7 @@
 			<div class="colored-bg-elements">
 				<div class="blot blot-7"></div>
 			</div>
-			<section class="box box-table team go-animate" id="team">
+			<section class="box box-table team go-animate" id="ambassadors">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						Ambassadors
@@ -204,7 +206,7 @@
 							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-14.jpg" alt="">
+										<img src="images/team-image-14.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
@@ -212,7 +214,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-15.jpg" alt="">
+										<img src="images/team-image-15.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Richards</div>
@@ -220,7 +222,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="images/team-image-5.jpg" alt="">
 									</div>
 									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
 									<div class="team-name">Eu Chan</div>
@@ -228,7 +230,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-16.jpg" alt="">
+										<img src="images/team-image-16.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">ONG Jun Hao</div>
@@ -236,19 +238,86 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-2.jpg" alt="">
+										<img src="images/team-image-2.jpg" alt="">
 									</div>
 									<a href="https://medium.com/@p.protocol/interview-cmo-pp-4e0990df1296" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Julia Choi</div>
 									<div class="team-type">CMO</div>
 								</div>
+								<!--
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-17.jpg" alt="">
+										<img src="images/team-image-17.jpg" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/max-bystrov-633487184/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Max B.</div>
 									<div class="team-type">Investor Relationship</div>
+								</div>
+								-->
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="box box-table team go-animate" id="team">
+				<div class="box-cell">
+					<h2 class="box-title ta-r">
+						Team
+					</h2>
+					<h3 class="box-title-ann mtop ta-r">Team</h3>
+					<div class="team-container">
+						<div class="team-slider-wrapper">
+							<div class="team-slider team-list">
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-7.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Reuben Godfrey</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-8.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Adnan Ahmed Siddiqui</div>
+								</div>
+								<!--
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-9.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Kilian Peter Krings</div>
+								</div>
+								-->
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-10.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Deepanshu Bhatt</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-11.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Anthony Johnson</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-12.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Jonathan Fianu</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-13.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Will Bryant</div>
 								</div>
 							</div>
 						</div>
@@ -265,7 +334,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
@@ -348,7 +418,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
@@ -411,7 +482,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
@@ -476,7 +548,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
@@ -617,7 +690,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
@@ -656,7 +730,8 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
