--- a/jp/index.html
+++ b/jp/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v22" media="all">
+	<link rel="stylesheet" href="css/style.css?v23" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -51,6 +51,7 @@
 						</a>
 						<div class="dropdown">
 							<a href="/kr/" class="dropdown-link"><span class="icon kr-icon"></span>Kr</a>
+							<a href="/ch/" class="dropdown-link"><span class="icon jp-icon"></span>Jp</a>
 							<a href="/ch/" class="dropdown-link"><span class="icon ch-icon"></span>Ch</a>
 							<a href="/" class="dropdown-link"><span class="icon en-icon"></span>英語</a>
 						</div>
@@ -954,7 +955,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v22"></script>
+	<script src="/js/scripts.js?v23"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
