--- a/ch/index.html
+++ b/ch/index.html
@@ -51,7 +51,7 @@
 						</a>
 						<div class="dropdown">
 							<a href="/kr/" class="dropdown-link"><span class="icon kr-icon"></span>Kr</a>
-							<a href="/ch/" class="dropdown-link"><span class="icon jp-icon"></span>Jp</a>
+							<a href="/jp/" class="dropdown-link"><span class="icon jp-icon"></span>Jp</a>
 							<a href="/ch/" class="dropdown-link"><span class="icon ch-icon"></span>Ch</a>
 							<a href="/" class="dropdown-link"><span class="icon en-icon"></span>英文</a>
 						</div>
