--- a/jp/index.html
+++ b/jp/index.html
@@ -11,9 +11,9 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="css/slick.css" media="all">
-	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v23" media="all">
+	<link rel="stylesheet" href="/css/slick.css" media="all">
+	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
+	<link rel="stylesheet" href="/css/style.css?v23" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
