--- a/jp/index.html
+++ b/jp/index.html
@@ -45,7 +45,7 @@
 					<li class="header-nav-list-item"><a href="/profile" title="">横顔</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
-							<span class="icon en-icon"></span>
+							<span class="icon jp-icon"></span>
 							英語
 							<span class="dropdown-button-tri"></span>
 						</a>
