--- a/ch/index.html
+++ b/ch/index.html
@@ -45,7 +45,7 @@
 					<li class="header-nav-list-item"><a href="/profile" title="">简况</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
-							<span class="icon en-icon"></span>
+							<span class="icon ch-icon"></span>
 							Ch
 							<span class="dropdown-button-tri"></span>
 						</a>
