--- a/jp/index.html
+++ b/jp/index.html
@@ -573,7 +573,7 @@
 				<div class="blot blot-6"></div>
 				<div class="flash flash-1"></div>
 			</div>
-			<section class="box box-table tokensale" id=tokensale>
+			<section class="box box-table tokensale" id="tokensale">
 				<div class="box-cell">
 					<h2 class="box-title">
 						トークン買取
@@ -618,6 +618,10 @@
 					</div>
 				</div>
 			</section>
+			<div class="bottom-panel">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">プレIEOに参加する</a>
+			</div>
 		</div>
 		<div class="box-wrapper colored-bg dark-bg">
 			<div class="page-scroller-wrapper">
