--- a/kr/index.html
+++ b/kr/index.html
@@ -496,7 +496,7 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
-			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"></div>
+			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
 					<!--
