--- a/ch/index.html
+++ b/ch/index.html
@@ -637,7 +637,7 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 				</ul>
 			</div>
-			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
+			<div class="box-bg-image" style="background-image: url(/images/roadmap-image-ch.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
 					<!--
