--- a/index.html
+++ b/index.html
@@ -590,13 +590,11 @@
 									<div class="diag diag-1"></div>
 								</div>
 								<div class="graph-text">
-									<div class="graph-text-box"><strong>19%</strong> - Team and advisors</div>
-									<div class="graph-text-box"><strong>20%</strong> - Reserve</div>
-									<div class="graph-text-box"><strong>15%</strong> - Ecosystem development</div>
-									<div class="graph-text-box"><strong>15%</strong> - Technical development</div>
-									<div class="graph-text-box"><strong>3.5%</strong> - Seed</div>
-									<div class="graph-text-box"><strong>5%</strong> - Pre-Sale</div>
-									<div class="graph-text-box"><strong>22.5%</strong> - Token Sale</div>
+									<div class="graph-text-box"><strong>30%</strong> - marketing and first tokenized products</div>
+									<div class="graph-text-box"><strong>35%</strong> - development and PP coin fund  </div>
+									<div class="graph-text-box"><strong>10%</strong> - legal, salary, lawyers  </div>
+									<div class="graph-text-box"><strong>10%</strong> - technology support</div>
+									<div class="graph-text-box"><strong>15%</strong> - team</div>
 								</div>
 							</div>
 						</div>
@@ -610,7 +608,7 @@
 									<div class="diag diag-1"></div>
 								</div>
 								<div class="graph-text">
-									<div class="graph-text-box"><strong>1. 40 000 000 000 PPO</strong> - total token supply</div>
+									<div class="graph-text-box"><strong>1. 65 000 000 PPO</strong> - IEO</div>
 									<div class="graph-text-box"><strong>2. 15 000 000 PPO</strong> - team and associates</div>
 									<div class="graph-text-box"><strong>3. 15 000 000 PPO</strong> - platform support</div>
 									<div class="graph-text-box"><strong>4. 5 000 000 PPO</strong> - marketing and advisors</div>
