--- a/jp/index.html
+++ b/jp/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="/css/slick.css" media="all">
 	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="/css/style.css?v25" media="all">
+	<link rel="stylesheet" href="/css/style.css?v26" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -141,6 +141,13 @@
 							<div class="form-box-container">
 								<a href="https://pprotocol.org/" target="_blank" class="button white block">
 									<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka3', 'Github']);">最優秀選手</button>
+								</a>
+							</div>
+						</div>
+						<div class="form-box">
+							<div class="form-box-container">
+								<a href="https://testnet.pprotocol.io" target="_blank" class="button white block big ornot">
+									Testnet
 								</a>
 							</div>
 						</div>
@@ -959,7 +966,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v25"></script>
+	<script src="/js/scripts.js?v26"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
