--- a/jp/index.html
+++ b/jp/index.html
@@ -562,6 +562,8 @@
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
+			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.jpg);"></div>
+			<!--
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
@@ -625,6 +627,7 @@
 					</div>
 				</div>
 			</section>
+			-->
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">プレIEOに参加する</a>
@@ -644,7 +647,7 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
 				</ul>
 			</div>
-			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
+			<div class="box-bg-image" style="background-image: url(/images/roadmap-image-jp.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
 					<!--
