--- a/kr/index.html
+++ b/kr/index.html
@@ -422,6 +422,8 @@
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
+			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.jpg);"></div>
+			<!--
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
@@ -488,6 +490,7 @@
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
+			-->
 		</div>
 		<div class="box-wrapper colored-bg dark-bg">
 			<div class="page-scroller-wrapper">
