--- a/jp/index.html
+++ b/jp/index.html
@@ -217,7 +217,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
-									<div class="team-type">Business Development (Europe)</div>
+									<div class="team-type">CEO (Chief Executive Officer) (Europe)</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -797,7 +797,7 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://steemit.com/@product.protocol" class="social-image">
+							<a href="https://steemit.com/@pprotocol" class="social-image">
 								<img src="/images/social-image-5.png" alt="">
 							</a>
 						</div>
